add tracking device-info
