# apps/backend/auth-service/src/controllers/types/DeviceInfo.type.ts
@@ -1,0 +1,10 @@
+export interface DeviceInfo {
+  my_os: string;
+  ip: string;
+  deviceDetails: object;
+  os: string;
+  browser: string;
+  userAgent: string;
+  currentDateTime: string;
+  location: string;
+}
